--- a/report/software-applications-ai-search-michaelmas-2011-summative.tex
+++ b/report/software-applications-ai-search-michaelmas-2011-summative.tex
@@ -78,9 +78,9 @@ In this report,\footnote{This is a summative assignment in the Software Applicat
     % accessed on 2010-12-07
     %\noindent
     %\makebox[0.3\textwidth]{
-	%\fbox{
+	\fbox{
 	    \includegraphics[width=0.3\paperwidth]{file012.png}
-	%}
+	}
     %}
 
     \caption{
